--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "app.css": "css/app.9277c9.css",
+  "app.css": "css/app.16e744.css",
   "app.js": "js/app.d91342.js",
   "customizer.js": "js/customizer.20a509.js",
   "runtime.js": "js/runtime.ddac92.js",
