home drafted, groups pages, forums, login, get support

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,12 @@
 {
-  "app.css": "css/app.16e744.css",
-  "app.js": "js/app.d91342.js",
-  "customizer.js": "js/customizer.20a509.js",
-  "runtime.js": "js/runtime.ddac92.js",
+  "app.css": "css/app.d27cb2.css",
+  "app.js": "js/app.f75c54.js",
+  "editor.css": "css/editor.b5fc8f.css",
+  "customizer.js": "js/customizer.261210.js",
+  "runtime.js": "js/runtime.2e2c46.js",
   "images/forum_overlay_bg.png": "images/forum_overlay_bg.aaebaf.png",
   "images/armley-project-photo.jpg": "images/armley-project-photo.148895.jpg",
+  "images/funders/wyca.png": "images/funders/wyca.c45f9e.png",
   "images/supporters-helen.jpg": "images/supporters-helen.4a3505.jpg",
   "images/funders/CommunityLedHomes.jpg": "images/funders/CommunityLedHomes.597de9.jpg",
   "images/supporters-ann.jpg": "images/supporters-ann.9afa2e.jpg",
@@ -14,16 +16,18 @@
   "images/supporters-martin.jpg": "images/supporters-martin.589ee5.jpg",
   "fonts/corporativesoft-bold.woff": "fonts/corporativesoft-bold.a726cc.woff",
   "images/what-hub.jpg": "images/what-hub.231dff.jpg",
-  "../theme.json": "../theme.json",
   "fonts/corporativesoft-bold.woff2": "fonts/corporativesoft-bold.225bb3.woff2",
   "images/pph-logo.png": "images/pph-logo.438d79.png",
-  "images/funders/cch.png": "images/funders/cch.01cacd.png",
+  "images/funders/cltn.png": "images/funders/cltn.f3d75f.png",
+  "images/funders/cch.png": "images/funders/cch.a8b866.png",
+  "images/funders/locality.png": "images/funders/locality.a5fb25.png",
   "images/funders/lch-condensed.png": "images/funders/lch-condensed.237b80.png",
   "images/funders/cuk.png": "images/funders/cuk.11d1e2.png",
   "images/funders/CLT-b.png": "images/funders/CLT-b.87c9fe.png",
   "images/funders/CLT-w.png": "images/funders/CLT-w.d1e099.png",
   "images/hub-announcement.svg": "images/hub-announcement.e220c2.svg",
   "images/funders/unltd-b.png": "images/funders/unltd-b.e85e03.png",
+  "../theme.json": "../theme.json",
   "images/funders/unltd-w.png": "images/funders/unltd-w.fa0094.png",
   "images/funders/BSHF-b.png": "images/funders/BSHF-b.9977bc.png",
   "images/funders/Community-Shares-logo-white.png": "images/funders/Community-Shares-logo-white.a5791a.png",
@@ -34,6 +38,6 @@
   "images/latest-project-bottom.svg": "images/latest-project-bottom.74548f.svg",
   "images/progress-clouds-1.svg": "images/progress-clouds-1.d52517.svg",
   "images/progress-clouds-2.svg": "images/progress-clouds-2.310c48.svg",
-  "images/hero-clouds.svg": "images/hero-clouds.223f6f.svg",
-  "entrypoints.json": "entrypoints.json"
+  "entrypoints.json": "entrypoints.json",
+  "images/hero-clouds.svg": "images/hero-clouds.223f6f.svg"
 }
