--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "devDependencies": {
     "@barba/core": "2.9.6",
     "@barba/css": "^2.1.15",
-    "@roots/bud": "6.20.0",
-    "@roots/bud-sass": "^6.24.0",
-    "@roots/bud-tailwindcss": "6.20.0",
-    "@roots/sage": "6.20.0",
+    "@roots/bud": "6.22.0",
+    "@roots/bud-sass": "6.24.0",
+    "@roots/bud-tailwindcss": "6.22.0",
+    "@roots/sage": "6.22.0",
     "typesplit": "^1.0.0"
   },
   "dependencies": {
+    "@shufo/prettier-plugin-blade": "^1.15.3",
+    "@tailwindcss/typography": "^0.5.16",
     "bulma": "^0.7.1",
     "countup.js": "^2.0.5",
     "modularscale-sass": "^3.0.10"
