--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.d27cb2.css",
+  "app.css": "css/app.6536ae.css",
   "app.js": "js/app.f75c54.js",
-  "editor.css": "css/editor.b5fc8f.css",
+  "editor.css": "css/editor.878ab6.css",
   "customizer.js": "js/customizer.261210.js",
   "runtime.js": "js/runtime.2e2c46.js",
   "images/forum_overlay_bg.png": "images/forum_overlay_bg.aaebaf.png",
