--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "app.css": "css/app.37263c.css",
+  "app.css": "css/app.ec855a.css",
   "app.js": "js/app.f75c54.js",
-  "editor.css": "css/editor.ac6233.css",
+  "editor.css": "css/editor.b802b6.css",
   "customizer.js": "js/customizer.261210.js",
   "runtime.js": "js/runtime.2e2c46.js",
   "images/forum_overlay_bg.png": "images/forum_overlay_bg.aaebaf.png",
